// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders with all flights and matches snapshot 1`] = `
.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 15px;
  background: #FFF;
}

.c7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 15px;
  background: #FFF;
  border-top: 1px dotted #c1c1c1;
}

.c7:before {
  content: "";
  position: absolute;
  top: -7px;
  right: 0;
  left: 0;
  margin: auto;
  border-top: 10px solid #FFF;
  border-left: 10px solid #FFF;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  box-shadow: 1px 1px #c1c1c1;
  width: 0;
}

.c5 {
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 40px;
  height: 46px;
  border: 2px solid #e1e1e1;
  border-radius: 3px;
  margin: 0;
  text-transform: uppercase;
  font-size: 13px;
  font-weight: bold;
  line-height: 21px;
}

.c5 span:first-child {
  background: #f2f2f2;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  margin-left: 10px;
  font-size: 14px;
  font-weight: bold;
}

.c6 span:first-child:after {
  content: " –";
}

.c6 span:last-child {
  font-size: 10px;
}

.c2 {
  background: #FFF;
}

.c3 {
  background: #FFF;
}

.c0 {
  color: #343434;
  border-top: 1px solid #c4c4c4;
}

.c1 {
  background: #FFF;
  padding: 15px 15px 0 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 0;
  font-weight: bold;
  font-size: 14px;
  text-transform: uppercase;
  position: relative;
  z-index: 50;
}

.c1 span {
  color: #06038D;
}

.c9 {
  background: #C6007E;
  border-radius: 3px;
  margin: 20px auto;
  width: 100%;
  height: 50px;
  border: 0;
  color: #FFF;
  font-family: "Roboto";
  font-weight: 900;
  font-size: 16px;
  text-transform: uppercase;
  cursor: pointer;
  -webkit-transition: background 0.1s ease;
  transition: background 0.1s ease;
}

.c9:hover,
.c9:active,
.c9:focus {
  background: #9F0065;
}

.c9:active {
  -webkit-transform: translate3d(1px,1px,0);
  -ms-transform: translate3d(1px,1px,0);
  transform: translate3d(1px,1px,0);
}

.c8 {
  background: #FFF;
  padding: 15px 15px 0 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 0;
  font-weight: bold;
  font-size: 14px;
  text-transform: uppercase;
  position: relative;
  z-index: 50;
  font-family: "Source Sans Pro";
  padding: 15px;
  font-size: 16px;
  background: #06038D;
  color: #FFF;
}

.c8 span {
  color: #06038D;
}

.c8 span {
  color: #FFF;
}

@media (min-width:960px) {
  .c0 {
    width: 230px;
  }
}

<div>
  <aside
    class="c0"
  >
    <h2
      class="c1"
    >
      Flights 
      <span>
        $1
      </span>
    </h2>
    <div
      class="c2"
      style="height: 0px; overflow: hidden;"
    >
      <div>
        <div
          class="c3"
          style="transform: translateY(-38px) rotateX(-90deg);"
        >
          <div
            class="c4"
            data-testid="cart-flight"
          >
            <p
              class="c5"
            >
              <span>
                Jul
              </span>
              <span>
                12
              </span>
            </p>
            <p
              class="c6"
            >
              <span>
                Barcelona
              </span>
              <span>
                Budapest
              </span>
              <span>
                Fri
                 
                10:30
                 – 
                13:30
              </span>
            </p>
          </div>
        </div>
        <div
          class="c3"
          style="transform: translateY(-38px) rotateX(-90deg);"
        >
          <div
            class="c7"
            data-testid="cart-flight"
          >
            <p
              class="c5"
            >
              <span>
                Jul
              </span>
              <span>
                12
              </span>
            </p>
            <p
              class="c6"
            >
              <span>
                Budapest
              </span>
              <span>
                Barcelona
              </span>
              <span>
                Fri
                 
                10:30
                 – 
                13:30
              </span>
            </p>
          </div>
        </div>
      </div>
    </div>
    <h2
      class="c8"
      data-testid="c-total"
    >
      Total 
      <span>
        $1
      </span>
    </h2>
    <button
      class="c9"
      data-testid="pay-btn"
      type="button"
    >
      Pay Now
    </button>
  </aside>
</div>
`;

exports[`Renders with inbound flight and matches snapshot 1`] = `
.c5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 15px;
  background: #FFF;
}

.c6 {
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 40px;
  height: 46px;
  border: 2px solid #e1e1e1;
  border-radius: 3px;
  margin: 0;
  text-transform: uppercase;
  font-size: 13px;
  font-weight: bold;
  line-height: 21px;
}

.c6 span:first-child {
  background: #f2f2f2;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  margin-left: 10px;
  font-size: 14px;
  font-weight: bold;
}

.c7 span:first-child:after {
  content: " –";
}

.c7 span:last-child {
  font-size: 10px;
}

.c2 {
  background: #FFF;
}

.c4 {
  background: #FFF;
}

.c0 {
  color: #343434;
  border-top: 1px solid #c4c4c4;
}

.c1 {
  background: #FFF;
  padding: 15px 15px 0 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 0;
  font-weight: bold;
  font-size: 14px;
  text-transform: uppercase;
  position: relative;
  z-index: 50;
}

.c1 span {
  color: #06038D;
}

.c3 {
  padding: 15px;
  background: #FFF;
  font-family: Source Sans Pro;
  font-weight: bold;
  font-size: 16px;
  color: #919191;
  margin: 0;
}

.c9 {
  background: #c1c1c1;
  border-radius: 3px;
  margin: 20px auto;
  width: 100%;
  height: 50px;
  border: 0;
  color: #FFF;
  font-family: "Roboto";
  font-weight: 900;
  font-size: 16px;
  text-transform: uppercase;
  cursor: initial;
  -webkit-transition: background 0.1s ease;
  transition: background 0.1s ease;
}

.c9:hover,
.c9:active,
.c9:focus {
  background: #c1c1c1;
}

.c9:active {
  -webkit-transform: translate3d(1px,1px,0);
  -ms-transform: translate3d(1px,1px,0);
  transform: translate3d(1px,1px,0);
}

.c8 {
  background: #FFF;
  padding: 15px 15px 0 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 0;
  font-weight: bold;
  font-size: 14px;
  text-transform: uppercase;
  position: relative;
  z-index: 50;
  font-family: "Source Sans Pro";
  padding: 15px;
  font-size: 16px;
  background: #06038D;
  color: #FFF;
}

.c8 span {
  color: #06038D;
}

.c8 span {
  color: #FFF;
}

@media (min-width:960px) {
  .c0 {
    width: 230px;
  }
}

<div>
  <aside
    class="c0"
  >
    <h2
      class="c1"
    >
      Flights 
      <span>
        $1
      </span>
    </h2>
    <div
      class="c2"
      style="height: 0px; overflow: hidden;"
    >
      <div>
        <p
          class="c3"
        >
          Choose an outbound flight
        </p>
        <div
          class="c4"
          style="transform: translateY(-38px) rotateX(-90deg);"
        >
          <div
            class="c5"
            data-testid="cart-flight"
          >
            <p
              class="c6"
            >
              <span>
                Jul
              </span>
              <span>
                12
              </span>
            </p>
            <p
              class="c7"
            >
              <span>
                Budapest
              </span>
              <span>
                Barcelona
              </span>
              <span>
                Fri
                 
                10:30
                 – 
                13:30
              </span>
            </p>
          </div>
        </div>
      </div>
    </div>
    <h2
      class="c8"
      data-testid="c-total"
    >
      Total 
      <span>
        $1
      </span>
    </h2>
    <button
      class="c9"
      data-testid="pay-btn"
      disabled=""
      type="button"
    >
      Pay Now
    </button>
  </aside>
</div>
`;

exports[`Renders with outbound flight and matches snapshot 1`] = `
.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 15px;
  background: #FFF;
}

.c5 {
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 40px;
  height: 46px;
  border: 2px solid #e1e1e1;
  border-radius: 3px;
  margin: 0;
  text-transform: uppercase;
  font-size: 13px;
  font-weight: bold;
  line-height: 21px;
}

.c5 span:first-child {
  background: #f2f2f2;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  margin-left: 10px;
  font-size: 14px;
  font-weight: bold;
}

.c6 span:first-child:after {
  content: " –";
}

.c6 span:last-child {
  font-size: 10px;
}

.c2 {
  background: #FFF;
}

.c3 {
  background: #FFF;
}

.c0 {
  color: #343434;
  border-top: 1px solid #c4c4c4;
}

.c1 {
  background: #FFF;
  padding: 15px 15px 0 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 0;
  font-weight: bold;
  font-size: 14px;
  text-transform: uppercase;
  position: relative;
  z-index: 50;
}

.c1 span {
  color: #06038D;
}

.c8 {
  background: #C6007E;
  border-radius: 3px;
  margin: 20px auto;
  width: 100%;
  height: 50px;
  border: 0;
  color: #FFF;
  font-family: "Roboto";
  font-weight: 900;
  font-size: 16px;
  text-transform: uppercase;
  cursor: pointer;
  -webkit-transition: background 0.1s ease;
  transition: background 0.1s ease;
}

.c8:hover,
.c8:active,
.c8:focus {
  background: #9F0065;
}

.c8:active {
  -webkit-transform: translate3d(1px,1px,0);
  -ms-transform: translate3d(1px,1px,0);
  transform: translate3d(1px,1px,0);
}

.c7 {
  background: #FFF;
  padding: 15px 15px 0 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 0;
  font-weight: bold;
  font-size: 14px;
  text-transform: uppercase;
  position: relative;
  z-index: 50;
  font-family: "Source Sans Pro";
  padding: 15px;
  font-size: 16px;
  background: #06038D;
  color: #FFF;
}

.c7 span {
  color: #06038D;
}

.c7 span {
  color: #FFF;
}

@media (min-width:960px) {
  .c0 {
    width: 230px;
  }
}

<div>
  <aside
    class="c0"
  >
    <h2
      class="c1"
    >
      Flights 
      <span>
        $10
      </span>
    </h2>
    <div
      class="c2"
      style="height: 0px; overflow: hidden;"
    >
      <div>
        <div
          class="c3"
          style="transform: translateY(-38px) rotateX(-90deg);"
        >
          <div
            class="c4"
            data-testid="cart-flight"
          >
            <p
              class="c5"
            >
              <span>
                Jul
              </span>
              <span>
                12
              </span>
            </p>
            <p
              class="c6"
            >
              <span>
                Barcelona
              </span>
              <span>
                Budapest
              </span>
              <span>
                Fri
                 
                10:30
                 – 
                13:30
              </span>
            </p>
          </div>
        </div>
      </div>
    </div>
    <h2
      class="c7"
      data-testid="c-total"
    >
      Total 
      <span>
        $10
      </span>
    </h2>
    <button
      class="c8"
      data-testid="pay-btn"
      type="button"
    >
      Pay Now
    </button>
  </aside>
</div>
`;

exports[`Renders without stations and matches snapshot 1`] = `
.c2 {
  background: #FFF;
}

.c0 {
  color: #343434;
  border-top: 1px solid #c4c4c4;
}

.c1 {
  background: #FFF;
  padding: 15px 15px 0 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 0;
  font-weight: bold;
  font-size: 14px;
  text-transform: uppercase;
  position: relative;
  z-index: 50;
}

.c1 span {
  color: #06038D;
}

.c3 {
  padding: 15px;
  background: #FFF;
  font-family: Source Sans Pro;
  font-weight: bold;
  font-size: 16px;
  color: #919191;
  margin: 0;
}

.c5 {
  background: #c1c1c1;
  border-radius: 3px;
  margin: 20px auto;
  width: 100%;
  height: 50px;
  border: 0;
  color: #FFF;
  font-family: "Roboto";
  font-weight: 900;
  font-size: 16px;
  text-transform: uppercase;
  cursor: initial;
  -webkit-transition: background 0.1s ease;
  transition: background 0.1s ease;
}

.c5:hover,
.c5:active,
.c5:focus {
  background: #c1c1c1;
}

.c5:active {
  -webkit-transform: translate3d(1px,1px,0);
  -ms-transform: translate3d(1px,1px,0);
  transform: translate3d(1px,1px,0);
}

.c4 {
  background: #FFF;
  padding: 15px 15px 0 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 0;
  font-weight: bold;
  font-size: 14px;
  text-transform: uppercase;
  position: relative;
  z-index: 50;
  font-family: "Source Sans Pro";
  padding: 15px;
  font-size: 16px;
  background: #06038D;
  color: #FFF;
}

.c4 span {
  color: #06038D;
}

.c4 span {
  color: #FFF;
}

@media (min-width:960px) {
  .c0 {
    width: 230px;
  }
}

<div>
  <aside
    class="c0"
  >
    <h2
      class="c1"
    >
      Flights 
      <span>
        $0
      </span>
    </h2>
    <div
      class="c2"
      style="height: 0px; overflow: hidden;"
    >
      <div>
        <p
          class="c3"
        >
          Choose an outbound flight
        </p>
      </div>
    </div>
    <h2
      class="c4"
      data-testid="c-total"
    >
      Total 
      <span>
        $0
      </span>
    </h2>
    <button
      class="c5"
      data-testid="pay-btn"
      disabled=""
      type="button"
    >
      Pay Now
    </button>
  </aside>
</div>
`;
